# JiraIssueConsolePy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cycle_times.csv  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: copilot-instructions-update.md  copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style.md  project_purpose.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: implementation-summary.md  mapping.md  pr-fixes-summary.md  user-stories-missing-integrations.md  vscode-testing-guide.md
examples/: example.json  workflow_example.txt
examples/output/: example_CFD.csv  example_IssueTimes.csv  example_Transitions.csv
scripts/: smoke_cli.sh
src/jira_issue_console/: __init__.py  cli.py  config.py  jira_client.py  logging_setup.py
src/jira_issue_console/core/: business_days.py  cfd.py  csv_export.py  cycletime.py  excel_export.py  issue_timing.py  issues.py  json_input.py  workflow_config.py
src/jira_issue_console/models/: __init__.py  (+1 more)
tests/: conftest.py
tests/acceptance/: test_cli_jql_filter.py  test_cli_list_open_issues.py  test_export_cfd.py  test_export_cycle_times.py  test_offline_input.py  test_output_folder.py  test_workflow_metrics.py  test_workflow_metrics.py.skip
tests/fixtures/: example.json
tests/unit/: test_basic.py  test_business_days.py  test_cfd.py  test_cli_business_days.py  test_cli_csv_export.py  test_config.py  test_config_workflow.py  test_csv_export.py  test_cycletime.py  test_cycletime_business_days.py  test_issue_status_mapping.py  test_issue_timing.py  test_issue_transitions.py  test_issues_async.py  test_issues_edgecases.py  test_jira_auth.py  test_jql.py  test_json_input.py  test_workflow_config.py
(+5 files in other folders)
