[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira_issue_console"
version = "0.1.0"
description = "Python port of Jaegerfeld/JiraIssueConsole (scaffold)"
authors = [
  { name = "Auto Generated" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.dev-dependencies]
# None — using requirements.txt for now
